--- a/scr/pbpb.csproj
+++ b/scr/pbpb.csproj
@@ -112,9 +112,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="pb_controls.cs" />
-    <Compile Include="pb_gui.cs" />
     <Compile Include="pb_input.cs" />
     <Compile Include="pb_log.cs" />
+    <Compile Include="pb_settings.cs" />
     <Compile Include="pb_status.cs" />
     <Compile Include="pb_window.cs" />
     <Compile Include="Program.cs" />
