--- a/scr/pbpb.csproj
+++ b/scr/pbpb.csproj
@@ -117,6 +117,7 @@
     <Compile Include="pb_controls.cs" />
     <Compile Include="pb_input.cs" />
     <Compile Include="pb_log.cs" />
+    <Compile Include="pb_round.cs" />
     <Compile Include="pb_setti.cs" />
     <Compile Include="pb_status.cs" />
     <Compile Include="pb_window.cs" />
